GPC/Parser/LexAndYacc/y.output
   0  $accept : pascal_file $end

   1  pascal_file : pascal_file program
   2              | program

   3  program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'
   4          | END_OF_FILE

   5  identifier_list : ID
   6                  | identifier_list ',' ID

   7  declarations : declarations VARIABLE identifier_list ':' type ';'
   8               |

   9  type : standard_type
  10       | ARRAY '[' INT_NUM DOTDOT INT_NUM ']' OF standard_type

  11  standard_type : INT_TYPE
  12                | REAL_TYPE

  13  subprogram_declarations : subprogram_declarations subprogram_declaration ';'
  14                          |

  15  subprogram_declaration : subprogram_head declarations subprogram_declarations compound_statement

  16  subprogram_head : FUNCTION ID arguments ':' standard_type ';'
  17                  | PROCEDURE ID arguments ';'

  18  arguments : '(' parameter_list ')'
  19            |

  20  parameter_list : identifier_list ':' type
  21                 | parameter_list ';' identifier_list ':' type

  22  compound_statement : BBEGIN optional_statements END

  23  optional_statements : statement_list
  24                      |

  25  statement_list : statement
  26                 | statement_list ';' statement

  27  statement : variable_assignment
  28            | procedure_statement
  29            | compound_statement
  30            | if_statement
  31            | WHILE relop_expression DO statement
  32            | FOR for_assign TO expression DO compound_statement

  33  if_statement : IF relop_expression THEN statement
  34               | IF relop_expression THEN statement ELSE statement

  35  variable_assignment : variable ASSIGNOP expression

  36  for_assign : variable_assignment
  37             | variable

  38  variable : ID
  39           | ID '[' expression ']'

  40  procedure_statement : ID
  41                      | ID '(' expression_list ')'

  42  relop_expression : NOT relop_expression
  43                   | relop_or

  44  relop_or : relop_or OR relop_and
  45           | relop_and

  46  relop_and : relop_and AND relop_paren
  47            | relop_paren

  48  relop_paren : '(' relop_expression ')'
  49              | relop_expression_single

  50  relop_expression_single : expression RELOP expression

  51  expression_list : expression
  52                  | expression_list ',' expression

  53  expression : term
  54             | sign term
  55             | expression ADDOP term

  56  term : factor
  57       | term MULOP factor

  58  factor : ID
  59         | ID '[' expression ']'
  60         | ID '(' expression_list ')'
  61         | INT_NUM
  62         | REAL_NUM
  63         | '(' expression ')'

  64  sign : '+'
  65       | '-'

state 0
	$accept : . pascal_file $end  (0)

	PROGRAM  shift 1
	END_OF_FILE  shift 2
	.  error

	pascal_file  goto 3
	program  goto 4


state 1
	program : PROGRAM . ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'  (3)

	ID  shift 5
	.  error


state 2
	program : END_OF_FILE .  (4)

	.  reduce 4


state 3
	$accept : pascal_file . $end  (0)
	pascal_file : pascal_file . program  (1)

	$end  accept
	PROGRAM  shift 1
	END_OF_FILE  shift 2
	.  error

	program  goto 6


state 4
	pascal_file : program .  (2)

	.  reduce 2


state 5
	program : PROGRAM ID . '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'  (3)

	'('  shift 7
	.  error


state 6
	pascal_file : pascal_file program .  (1)

	.  reduce 1


state 7
	program : PROGRAM ID '(' . identifier_list ')' ';' declarations subprogram_declarations compound_statement '.'  (3)

	ID  shift 8
	.  error

	identifier_list  goto 9


state 8
	identifier_list : ID .  (5)

	.  reduce 5


state 9
	program : PROGRAM ID '(' identifier_list . ')' ';' declarations subprogram_declarations compound_statement '.'  (3)
	identifier_list : identifier_list . ',' ID  (6)

	')'  shift 10
	','  shift 11
	.  error


state 10
	program : PROGRAM ID '(' identifier_list ')' . ';' declarations subprogram_declarations compound_statement '.'  (3)

	';'  shift 12
	.  error


state 11
	identifier_list : identifier_list ',' . ID  (6)

	ID  shift 13
	.  error


state 12
	program : PROGRAM ID '(' identifier_list ')' ';' . declarations subprogram_declarations compound_statement '.'  (3)
	declarations : .  (8)

	.  reduce 8

	declarations  goto 14


state 13
	identifier_list : identifier_list ',' ID .  (6)

	.  reduce 6


state 14
	program : PROGRAM ID '(' identifier_list ')' ';' declarations . subprogram_declarations compound_statement '.'  (3)
	declarations : declarations . VARIABLE identifier_list ':' type ';'  (7)
	subprogram_declarations : .  (14)

	VARIABLE  shift 15
	PROCEDURE  reduce 14
	FUNCTION  reduce 14
	BBEGIN  reduce 14

	subprogram_declarations  goto 16


state 15
	declarations : declarations VARIABLE . identifier_list ':' type ';'  (7)

	ID  shift 8
	.  error

	identifier_list  goto 17


state 16
	program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations . compound_statement '.'  (3)
	subprogram_declarations : subprogram_declarations . subprogram_declaration ';'  (13)

	PROCEDURE  shift 18
	FUNCTION  shift 19
	BBEGIN  shift 20
	.  error

	compound_statement  goto 21
	subprogram_declaration  goto 22
	subprogram_head  goto 23


state 17
	identifier_list : identifier_list . ',' ID  (6)
	declarations : declarations VARIABLE identifier_list . ':' type ';'  (7)

	','  shift 11
	':'  shift 24
	.  error


state 18
	subprogram_head : PROCEDURE . ID arguments ';'  (17)

	ID  shift 25
	.  error


state 19
	subprogram_head : FUNCTION . ID arguments ':' standard_type ';'  (16)

	ID  shift 26
	.  error


state 20
	compound_statement : BBEGIN . optional_statements END  (22)
	optional_statements : .  (24)

	BBEGIN  shift 20
	ID  shift 27
	IF  shift 28
	WHILE  shift 29
	FOR  shift 30
	END  reduce 24

	compound_statement  goto 31
	optional_statements  goto 32
	statement_list  goto 33
	statement  goto 34
	variable_assignment  goto 35
	procedure_statement  goto 36
	if_statement  goto 37
	variable  goto 38


state 21
	program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement . '.'  (3)

	'.'  shift 39
	.  error


state 22
	subprogram_declarations : subprogram_declarations subprogram_declaration . ';'  (13)

	';'  shift 40
	.  error


state 23
	subprogram_declaration : subprogram_head . declarations subprogram_declarations compound_statement  (15)
	declarations : .  (8)

	.  reduce 8

	declarations  goto 41


state 24
	declarations : declarations VARIABLE identifier_list ':' . type ';'  (7)

	INT_TYPE  shift 42
	REAL_TYPE  shift 43
	ARRAY  shift 44
	.  error

	type  goto 45
	standard_type  goto 46


state 25
	subprogram_head : PROCEDURE ID . arguments ';'  (17)
	arguments : .  (19)

	'('  shift 47
	';'  reduce 19

	arguments  goto 48


state 26
	subprogram_head : FUNCTION ID . arguments ':' standard_type ';'  (16)
	arguments : .  (19)

	'('  shift 47
	':'  reduce 19

	arguments  goto 49


state 27
	variable : ID .  (38)
	variable : ID . '[' expression ']'  (39)
	procedure_statement : ID .  (40)
	procedure_statement : ID . '(' expression_list ')'  (41)

	'('  shift 50
	'['  shift 51
	END  reduce 40
	ELSE  reduce 40
	ASSIGNOP  reduce 38
	';'  reduce 40


state 28
	if_statement : IF . relop_expression THEN statement  (33)
	if_statement : IF . relop_expression THEN statement ELSE statement  (34)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	NOT  shift 55
	'('  shift 56
	'+'  shift 57
	'-'  shift 58
	.  error

	relop_expression  goto 59
	expression  goto 60
	relop_or  goto 61
	relop_and  goto 62
	relop_paren  goto 63
	relop_expression_single  goto 64
	term  goto 65
	sign  goto 66
	factor  goto 67


state 29
	statement : WHILE . relop_expression DO statement  (31)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	NOT  shift 55
	'('  shift 56
	'+'  shift 57
	'-'  shift 58
	.  error

	relop_expression  goto 68
	expression  goto 60
	relop_or  goto 61
	relop_and  goto 62
	relop_paren  goto 63
	relop_expression_single  goto 64
	term  goto 65
	sign  goto 66
	factor  goto 67


state 30
	statement : FOR . for_assign TO expression DO compound_statement  (32)

	ID  shift 69
	.  error

	variable_assignment  goto 70
	for_assign  goto 71
	variable  goto 72


state 31
	statement : compound_statement .  (29)

	.  reduce 29


state 32
	compound_statement : BBEGIN optional_statements . END  (22)

	END  shift 73
	.  error


state 33
	optional_statements : statement_list .  (23)
	statement_list : statement_list . ';' statement  (26)

	';'  shift 74
	END  reduce 23


state 34
	statement_list : statement .  (25)

	.  reduce 25


state 35
	statement : variable_assignment .  (27)

	.  reduce 27


state 36
	statement : procedure_statement .  (28)

	.  reduce 28


state 37
	statement : if_statement .  (30)

	.  reduce 30


state 38
	variable_assignment : variable . ASSIGNOP expression  (35)

	ASSIGNOP  shift 75
	.  error


state 39
	program : PROGRAM ID '(' identifier_list ')' ';' declarations subprogram_declarations compound_statement '.' .  (3)

	.  reduce 3


state 40
	subprogram_declarations : subprogram_declarations subprogram_declaration ';' .  (13)

	.  reduce 13


state 41
	declarations : declarations . VARIABLE identifier_list ':' type ';'  (7)
	subprogram_declaration : subprogram_head declarations . subprogram_declarations compound_statement  (15)
	subprogram_declarations : .  (14)

	VARIABLE  shift 15
	PROCEDURE  reduce 14
	FUNCTION  reduce 14
	BBEGIN  reduce 14

	subprogram_declarations  goto 76


state 42
	standard_type : INT_TYPE .  (11)

	.  reduce 11


state 43
	standard_type : REAL_TYPE .  (12)

	.  reduce 12


state 44
	type : ARRAY . '[' INT_NUM DOTDOT INT_NUM ']' OF standard_type  (10)

	'['  shift 77
	.  error


state 45
	declarations : declarations VARIABLE identifier_list ':' type . ';'  (7)

	';'  shift 78
	.  error


state 46
	type : standard_type .  (9)

	.  reduce 9


state 47
	arguments : '(' . parameter_list ')'  (18)

	ID  shift 8
	.  error

	identifier_list  goto 79
	parameter_list  goto 80


state 48
	subprogram_head : PROCEDURE ID arguments . ';'  (17)

	';'  shift 81
	.  error


state 49
	subprogram_head : FUNCTION ID arguments . ':' standard_type ';'  (16)

	':'  shift 82
	.  error


state 50
	procedure_statement : ID '(' . expression_list ')'  (41)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 84
	expression_list  goto 85
	term  goto 65
	sign  goto 66
	factor  goto 67


state 51
	variable : ID '[' . expression ']'  (39)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 86
	term  goto 65
	sign  goto 66
	factor  goto 67


state 52
	factor : INT_NUM .  (61)

	.  reduce 61


state 53
	factor : REAL_NUM .  (62)

	.  reduce 62


state 54
	factor : ID .  (58)
	factor : ID . '[' expression ']'  (59)
	factor : ID . '(' expression_list ')'  (60)

	'('  shift 87
	'['  shift 88
	END  reduce 58
	THEN  reduce 58
	ELSE  reduce 58
	DO  reduce 58
	TO  reduce 58
	RELOP  reduce 58
	ADDOP  reduce 58
	OR  reduce 58
	MULOP  reduce 58
	AND  reduce 58
	')'  reduce 58
	';'  reduce 58
	','  reduce 58
	']'  reduce 58


state 55
	relop_expression : NOT . relop_expression  (42)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	NOT  shift 55
	'('  shift 56
	'+'  shift 57
	'-'  shift 58
	.  error

	relop_expression  goto 89
	expression  goto 60
	relop_or  goto 61
	relop_and  goto 62
	relop_paren  goto 63
	relop_expression_single  goto 64
	term  goto 65
	sign  goto 66
	factor  goto 67


state 56
	relop_paren : '(' . relop_expression ')'  (48)
	factor : '(' . expression ')'  (63)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	NOT  shift 55
	'('  shift 56
	'+'  shift 57
	'-'  shift 58
	.  error

	relop_expression  goto 90
	expression  goto 91
	relop_or  goto 61
	relop_and  goto 62
	relop_paren  goto 63
	relop_expression_single  goto 64
	term  goto 65
	sign  goto 66
	factor  goto 67


state 57
	sign : '+' .  (64)

	.  reduce 64


state 58
	sign : '-' .  (65)

	.  reduce 65


state 59
	if_statement : IF relop_expression . THEN statement  (33)
	if_statement : IF relop_expression . THEN statement ELSE statement  (34)

	THEN  shift 92
	.  error


state 60
	relop_expression_single : expression . RELOP expression  (50)
	expression : expression . ADDOP term  (55)

	RELOP  shift 93
	ADDOP  shift 94
	.  error


state 61
	relop_expression : relop_or .  (43)
	relop_or : relop_or . OR relop_and  (44)

	OR  shift 95
	THEN  reduce 43
	DO  reduce 43
	')'  reduce 43


state 62
	relop_or : relop_and .  (45)
	relop_and : relop_and . AND relop_paren  (46)

	AND  shift 96
	THEN  reduce 45
	DO  reduce 45
	OR  reduce 45
	')'  reduce 45


state 63
	relop_and : relop_paren .  (47)

	.  reduce 47


state 64
	relop_paren : relop_expression_single .  (49)

	.  reduce 49


state 65
	expression : term .  (53)
	term : term . MULOP factor  (57)

	MULOP  shift 97
	END  reduce 53
	THEN  reduce 53
	ELSE  reduce 53
	DO  reduce 53
	TO  reduce 53
	RELOP  reduce 53
	ADDOP  reduce 53
	OR  reduce 53
	AND  reduce 53
	')'  reduce 53
	';'  reduce 53
	','  reduce 53
	']'  reduce 53


state 66
	expression : sign . term  (54)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	.  error

	term  goto 98
	factor  goto 67


state 67
	term : factor .  (56)

	.  reduce 56


state 68
	statement : WHILE relop_expression . DO statement  (31)

	DO  shift 99
	.  error


state 69
	variable : ID .  (38)
	variable : ID . '[' expression ']'  (39)

	'['  shift 51
	TO  reduce 38
	ASSIGNOP  reduce 38


state 70
	for_assign : variable_assignment .  (36)

	.  reduce 36


state 71
	statement : FOR for_assign . TO expression DO compound_statement  (32)

	TO  shift 100
	.  error


state 72
	variable_assignment : variable . ASSIGNOP expression  (35)
	for_assign : variable .  (37)

	ASSIGNOP  shift 75
	TO  reduce 37


state 73
	compound_statement : BBEGIN optional_statements END .  (22)

	.  reduce 22


state 74
	statement_list : statement_list ';' . statement  (26)

	BBEGIN  shift 20
	ID  shift 27
	IF  shift 28
	WHILE  shift 29
	FOR  shift 30
	.  error

	compound_statement  goto 31
	statement  goto 101
	variable_assignment  goto 35
	procedure_statement  goto 36
	if_statement  goto 37
	variable  goto 38


state 75
	variable_assignment : variable ASSIGNOP . expression  (35)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 102
	term  goto 65
	sign  goto 66
	factor  goto 67


state 76
	subprogram_declarations : subprogram_declarations . subprogram_declaration ';'  (13)
	subprogram_declaration : subprogram_head declarations subprogram_declarations . compound_statement  (15)

	PROCEDURE  shift 18
	FUNCTION  shift 19
	BBEGIN  shift 20
	.  error

	compound_statement  goto 103
	subprogram_declaration  goto 22
	subprogram_head  goto 23


state 77
	type : ARRAY '[' . INT_NUM DOTDOT INT_NUM ']' OF standard_type  (10)

	INT_NUM  shift 104
	.  error


state 78
	declarations : declarations VARIABLE identifier_list ':' type ';' .  (7)

	.  reduce 7


state 79
	identifier_list : identifier_list . ',' ID  (6)
	parameter_list : identifier_list . ':' type  (20)

	','  shift 11
	':'  shift 105
	.  error


state 80
	arguments : '(' parameter_list . ')'  (18)
	parameter_list : parameter_list . ';' identifier_list ':' type  (21)

	')'  shift 106
	';'  shift 107
	.  error


state 81
	subprogram_head : PROCEDURE ID arguments ';' .  (17)

	.  reduce 17


state 82
	subprogram_head : FUNCTION ID arguments ':' . standard_type ';'  (16)

	INT_TYPE  shift 42
	REAL_TYPE  shift 43
	.  error

	standard_type  goto 108


state 83
	factor : '(' . expression ')'  (63)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 109
	term  goto 65
	sign  goto 66
	factor  goto 67


state 84
	expression_list : expression .  (51)
	expression : expression . ADDOP term  (55)

	ADDOP  shift 94
	')'  reduce 51
	','  reduce 51


state 85
	procedure_statement : ID '(' expression_list . ')'  (41)
	expression_list : expression_list . ',' expression  (52)

	')'  shift 110
	','  shift 111
	.  error


state 86
	variable : ID '[' expression . ']'  (39)
	expression : expression . ADDOP term  (55)

	ADDOP  shift 94
	']'  shift 112
	.  error


state 87
	factor : ID '(' . expression_list ')'  (60)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 84
	expression_list  goto 113
	term  goto 65
	sign  goto 66
	factor  goto 67


state 88
	factor : ID '[' . expression ']'  (59)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 114
	term  goto 65
	sign  goto 66
	factor  goto 67


state 89
	relop_expression : NOT relop_expression .  (42)

	.  reduce 42


state 90
	relop_paren : '(' relop_expression . ')'  (48)

	')'  shift 115
	.  error


state 91
	relop_expression_single : expression . RELOP expression  (50)
	expression : expression . ADDOP term  (55)
	factor : '(' expression . ')'  (63)

	RELOP  shift 93
	ADDOP  shift 94
	')'  shift 116
	.  error


state 92
	if_statement : IF relop_expression THEN . statement  (33)
	if_statement : IF relop_expression THEN . statement ELSE statement  (34)

	BBEGIN  shift 20
	ID  shift 27
	IF  shift 28
	WHILE  shift 29
	FOR  shift 30
	.  error

	compound_statement  goto 31
	statement  goto 117
	variable_assignment  goto 35
	procedure_statement  goto 36
	if_statement  goto 37
	variable  goto 38


state 93
	relop_expression_single : expression RELOP . expression  (50)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 118
	term  goto 65
	sign  goto 66
	factor  goto 67


state 94
	expression : expression ADDOP . term  (55)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	.  error

	term  goto 119
	factor  goto 67


state 95
	relop_or : relop_or OR . relop_and  (44)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 56
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 60
	relop_and  goto 120
	relop_paren  goto 63
	relop_expression_single  goto 64
	term  goto 65
	sign  goto 66
	factor  goto 67


state 96
	relop_and : relop_and AND . relop_paren  (46)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 56
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 60
	relop_paren  goto 121
	relop_expression_single  goto 64
	term  goto 65
	sign  goto 66
	factor  goto 67


state 97
	term : term MULOP . factor  (57)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	.  error

	factor  goto 122


state 98
	expression : sign term .  (54)
	term : term . MULOP factor  (57)

	MULOP  shift 97
	END  reduce 54
	THEN  reduce 54
	ELSE  reduce 54
	DO  reduce 54
	TO  reduce 54
	RELOP  reduce 54
	ADDOP  reduce 54
	OR  reduce 54
	AND  reduce 54
	')'  reduce 54
	';'  reduce 54
	','  reduce 54
	']'  reduce 54


state 99
	statement : WHILE relop_expression DO . statement  (31)

	BBEGIN  shift 20
	ID  shift 27
	IF  shift 28
	WHILE  shift 29
	FOR  shift 30
	.  error

	compound_statement  goto 31
	statement  goto 123
	variable_assignment  goto 35
	procedure_statement  goto 36
	if_statement  goto 37
	variable  goto 38


state 100
	statement : FOR for_assign TO . expression DO compound_statement  (32)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 124
	term  goto 65
	sign  goto 66
	factor  goto 67


state 101
	statement_list : statement_list ';' statement .  (26)

	.  reduce 26


state 102
	variable_assignment : variable ASSIGNOP expression .  (35)
	expression : expression . ADDOP term  (55)

	ADDOP  shift 94
	END  reduce 35
	ELSE  reduce 35
	TO  reduce 35
	';'  reduce 35


state 103
	subprogram_declaration : subprogram_head declarations subprogram_declarations compound_statement .  (15)

	.  reduce 15


state 104
	type : ARRAY '[' INT_NUM . DOTDOT INT_NUM ']' OF standard_type  (10)

	DOTDOT  shift 125
	.  error


state 105
	parameter_list : identifier_list ':' . type  (20)

	INT_TYPE  shift 42
	REAL_TYPE  shift 43
	ARRAY  shift 44
	.  error

	type  goto 126
	standard_type  goto 46


state 106
	arguments : '(' parameter_list ')' .  (18)

	.  reduce 18


state 107
	parameter_list : parameter_list ';' . identifier_list ':' type  (21)

	ID  shift 8
	.  error

	identifier_list  goto 127


state 108
	subprogram_head : FUNCTION ID arguments ':' standard_type . ';'  (16)

	';'  shift 128
	.  error


state 109
	expression : expression . ADDOP term  (55)
	factor : '(' expression . ')'  (63)

	ADDOP  shift 94
	')'  shift 116
	.  error


state 110
	procedure_statement : ID '(' expression_list ')' .  (41)

	.  reduce 41


state 111
	expression_list : expression_list ',' . expression  (52)

	INT_NUM  shift 52
	REAL_NUM  shift 53
	ID  shift 54
	'('  shift 83
	'+'  shift 57
	'-'  shift 58
	.  error

	expression  goto 129
	term  goto 65
	sign  goto 66
	factor  goto 67


state 112
	variable : ID '[' expression ']' .  (39)

	.  reduce 39


state 113
	expression_list : expression_list . ',' expression  (52)
	factor : ID '(' expression_list . ')'  (60)

	')'  shift 130
	','  shift 111
	.  error


state 114
	expression : expression . ADDOP term  (55)
	factor : ID '[' expression . ']'  (59)

	ADDOP  shift 94
	']'  shift 131
	.  error


state 115
	relop_paren : '(' relop_expression ')' .  (48)

	.  reduce 48


state 116
	factor : '(' expression ')' .  (63)

	.  reduce 63


state 117
	if_statement : IF relop_expression THEN statement .  (33)
	if_statement : IF relop_expression THEN statement . ELSE statement  (34)

	ELSE  shift 132
	END  reduce 33
	';'  reduce 33


state 118
	relop_expression_single : expression RELOP expression .  (50)
	expression : expression . ADDOP term  (55)

	ADDOP  shift 94
	THEN  reduce 50
	DO  reduce 50
	OR  reduce 50
	AND  reduce 50
	')'  reduce 50


state 119
	expression : expression ADDOP term .  (55)
	term : term . MULOP factor  (57)

	MULOP  shift 97
	END  reduce 55
	THEN  reduce 55
	ELSE  reduce 55
	DO  reduce 55
	TO  reduce 55
	RELOP  reduce 55
	ADDOP  reduce 55
	OR  reduce 55
	AND  reduce 55
	')'  reduce 55
	';'  reduce 55
	','  reduce 55
	']'  reduce 55


state 120
	relop_or : relop_or OR relop_and .  (44)
	relop_and : relop_and . AND relop_paren  (46)

	AND  shift 96
	THEN  reduce 44
	DO  reduce 44
	OR  reduce 44
	')'  reduce 44


state 121
	relop_and : relop_and AND relop_paren .  (46)

	.  reduce 46


state 122
	term : term MULOP factor .  (57)

	.  reduce 57


state 123
	statement : WHILE relop_expression DO statement .  (31)

	.  reduce 31


state 124
	statement : FOR for_assign TO expression . DO compound_statement  (32)
	expression : expression . ADDOP term  (55)

	DO  shift 133
	ADDOP  shift 94
	.  error


state 125
	type : ARRAY '[' INT_NUM DOTDOT . INT_NUM ']' OF standard_type  (10)

	INT_NUM  shift 134
	.  error


state 126
	parameter_list : identifier_list ':' type .  (20)

	.  reduce 20


state 127
	identifier_list : identifier_list . ',' ID  (6)
	parameter_list : parameter_list ';' identifier_list . ':' type  (21)

	','  shift 11
	':'  shift 135
	.  error


state 128
	subprogram_head : FUNCTION ID arguments ':' standard_type ';' .  (16)

	.  reduce 16


state 129
	expression_list : expression_list ',' expression .  (52)
	expression : expression . ADDOP term  (55)

	ADDOP  shift 94
	')'  reduce 52
	','  reduce 52


state 130
	factor : ID '(' expression_list ')' .  (60)

	.  reduce 60


state 131
	factor : ID '[' expression ']' .  (59)

	.  reduce 59


state 132
	if_statement : IF relop_expression THEN statement ELSE . statement  (34)

	BBEGIN  shift 20
	ID  shift 27
	IF  shift 28
	WHILE  shift 29
	FOR  shift 30
	.  error

	compound_statement  goto 31
	statement  goto 136
	variable_assignment  goto 35
	procedure_statement  goto 36
	if_statement  goto 37
	variable  goto 38


state 133
	statement : FOR for_assign TO expression DO . compound_statement  (32)

	BBEGIN  shift 20
	.  error

	compound_statement  goto 137


state 134
	type : ARRAY '[' INT_NUM DOTDOT INT_NUM . ']' OF standard_type  (10)

	']'  shift 138
	.  error


state 135
	parameter_list : parameter_list ';' identifier_list ':' . type  (21)

	INT_TYPE  shift 42
	REAL_TYPE  shift 43
	ARRAY  shift 44
	.  error

	type  goto 139
	standard_type  goto 46


state 136
	if_statement : IF relop_expression THEN statement ELSE statement .  (34)

	.  reduce 34


state 137
	statement : FOR for_assign TO expression DO compound_statement .  (32)

	.  reduce 32


state 138
	type : ARRAY '[' INT_NUM DOTDOT INT_NUM ']' . OF standard_type  (10)

	OF  shift 140
	.  error


state 139
	parameter_list : parameter_list ';' identifier_list ':' type .  (21)

	.  reduce 21


state 140
	type : ARRAY '[' INT_NUM DOTDOT INT_NUM ']' OF . standard_type  (10)

	INT_TYPE  shift 42
	REAL_TYPE  shift 43
	.  error

	standard_type  goto 141


state 141
	type : ARRAY '[' INT_NUM DOTDOT INT_NUM ']' OF standard_type .  (10)

	.  reduce 10


51 terminals, 31 nonterminals
66 grammar rules, 142 states
